--- a/Beng Cheong Cheong.ipynb
+++ b/Beng Cheong Cheong.ipynb
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c488c4e2",
+   "id": "19b11bd8",
    "metadata": {},
    "source": [
     "## 2.2 Feature Engineering\n",
@@ -4317,12 +4317,261 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c649a008",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lasso</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_StoneBr</th>\n",
+       "      <td>75522.864626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_NridgHt</th>\n",
+       "      <td>66271.244249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_NoRidge</th>\n",
+       "      <td>50000.791586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2ndFlrSF</th>\n",
+       "      <td>32174.175507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_Somerst</th>\n",
+       "      <td>30830.587802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ExterQual</th>\n",
+       "      <td>25976.400932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_Veenker</th>\n",
+       "      <td>25408.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_Crawfor</th>\n",
+       "      <td>24396.906921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Foundation_Slab</th>\n",
+       "      <td>18362.564817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_NPkVill</th>\n",
+       "      <td>15284.600593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Foundation_PConc</th>\n",
+       "      <td>15032.549034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GarageFinish_Fin</th>\n",
+       "      <td>13412.209070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HouseStyle_1Story</th>\n",
+       "      <td>12543.357459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BsmtExposure</th>\n",
+       "      <td>11042.952566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fireplaces</th>\n",
+       "      <td>9760.469333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LotArea</th>\n",
+       "      <td>6971.623828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BsmtUnfSF</th>\n",
+       "      <td>6635.479701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GarageQual</th>\n",
+       "      <td>5914.423606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <td>5800.449115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OverallCond</th>\n",
+       "      <td>5251.967962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_BrDale</th>\n",
+       "      <td>4658.334536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GarageType_Attchd</th>\n",
+       "      <td>4629.565553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BsmtFinType1</th>\n",
+       "      <td>4607.714019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WoodDeckSF</th>\n",
+       "      <td>3926.397134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HouseStyle_SLvl</th>\n",
+       "      <td>3905.639140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <td>3379.939920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_SawyerW</th>\n",
+       "      <td>3291.490355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LowQualFinSF</th>\n",
+       "      <td>3177.524721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_NWAmes</th>\n",
+       "      <td>3120.293640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GarageType_Basment</th>\n",
+       "      <td>2626.128975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KitchenAbvGr</th>\n",
+       "      <td>2594.757500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neighborhood_Timber</th>\n",
+       "      <td>2482.835458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3SsnPorch</th>\n",
+       "      <td>2472.977669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PoolArea</th>\n",
+       "      <td>2205.297925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OpenPorchSF</th>\n",
+       "      <td>1261.910731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BsmtFinType2</th>\n",
+       "      <td>973.208356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HouseStyle_SFoyer</th>\n",
+       "      <td>70.422140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EnclosedPorch</th>\n",
+       "      <td>4.325202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Lasso\n",
+       "Neighborhood_StoneBr  75522.864626\n",
+       "Neighborhood_NridgHt  66271.244249\n",
+       "Neighborhood_NoRidge  50000.791586\n",
+       "2ndFlrSF              32174.175507\n",
+       "Neighborhood_Somerst  30830.587802\n",
+       "ExterQual             25976.400932\n",
+       "Neighborhood_Veenker  25408.948012\n",
+       "Neighborhood_Crawfor  24396.906921\n",
+       "Foundation_Slab       18362.564817\n",
+       "Neighborhood_NPkVill  15284.600593\n",
+       "Foundation_PConc      15032.549034\n",
+       "GarageFinish_Fin      13412.209070\n",
+       "HouseStyle_1Story     12543.357459\n",
+       "BsmtExposure          11042.952566\n",
+       "Fireplaces             9760.469333\n",
+       "LotArea                6971.623828\n",
+       "BsmtUnfSF              6635.479701\n",
+       "GarageQual             5914.423606\n",
+       "MasVnrArea             5800.449115\n",
+       "OverallCond            5251.967962\n",
+       "Neighborhood_BrDale    4658.334536\n",
+       "GarageType_Attchd      4629.565553\n",
+       "BsmtFinType1           4607.714019\n",
+       "WoodDeckSF             3926.397134\n",
+       "HouseStyle_SLvl        3905.639140\n",
+       "ScreenPorch            3379.939920\n",
+       "Neighborhood_SawyerW   3291.490355\n",
+       "LowQualFinSF           3177.524721\n",
+       "Neighborhood_NWAmes    3120.293640\n",
+       "GarageType_Basment     2626.128975\n",
+       "KitchenAbvGr           2594.757500\n",
+       "Neighborhood_Timber    2482.835458\n",
+       "3SsnPorch              2472.977669\n",
+       "PoolArea               2205.297925\n",
+       "OpenPorchSF            1261.910731\n",
+       "BsmtFinType2            973.208356\n",
+       "HouseStyle_SFoyer        70.422140\n",
+       "EnclosedPorch             4.325202"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#observing the coefficients of the Ridge Regression models that predict housing price\n",
+    "df_betas = pd.DataFrame(index=df_train.columns)\n",
+    "df_betas.rows = df_train.columns\n",
+    "df_betas['Lasso'] = lasso.coef_\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "df_betas[df_betas['Lasso'] > 0].sort_values(by='Lasso', key=abs, ascending= False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b6f896b7",
    "metadata": {},
    "source": [
     "## Summary\n",
     "\n",
+    "In summary, I am choosing Lasso Regression model due the fact that Lasso Regression performs RFE, which will automatically reduce the number of features. As I am not a subject matter expert in the field of real estate, it would be better for the Lasso Regression to perform RFE.\n",
+    "\n",
+    "Some of the features that we can explain to the clients are:\n",
+    "1. Neighborhood column. The neighborhood areas correlate very strongly to the housing prices, with some neighborhood areas in particular such as StoneBr, NridgHt, and NoRidge having the highest beta coefficients. \n",
+    "2. Some numeric columns, such as 2ndFlrSF (2nd Floor Square Feet) and ExterQual (External Quality Materials), are also features that significantly predictthe priceof house. \n",
     "\n",
     "# 5. Model Evaluation\n",
     "\n",
@@ -4331,7 +4580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "8354fd00",
    "metadata": {},
    "outputs": [
@@ -4366,7 +4615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "a0aa6252",
    "metadata": {},
    "outputs": [
@@ -4415,7 +4664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "28350483",
    "metadata": {},
    "outputs": [
@@ -4470,7 +4719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "d49f06ad",
    "metadata": {},
    "outputs": [
@@ -4527,7 +4776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "9b9963aa",
    "metadata": {},
    "outputs": [
@@ -4714,7 +4963,7 @@
        "Neighborhood_Blueste  -7537.387570"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4730,7 +4979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "827ae308",
    "metadata": {},
    "outputs": [
@@ -4917,7 +5166,7 @@
        "Neighborhood_Blueste  -4397.326744"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4933,7 +5182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "f48d7b99",
    "metadata": {},
    "outputs": [
@@ -5335,7 +5584,7 @@
        "Neighborhood_Mitchel     -0.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5352,7 +5601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "419ce231",
    "metadata": {},
    "outputs": [
@@ -5754,7 +6003,7 @@
        "Neighborhood_Mitchel      0.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5771,7 +6020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "87ea7a90",
    "metadata": {},
    "outputs": [
@@ -5809,7 +6058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "473bae07",
    "metadata": {},
    "outputs": [
@@ -5819,7 +6068,7 @@
        "Lasso(alpha=100)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5838,8 +6087,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "dab56d4f",
+   "execution_count": 53,
+   "id": "ec4f30ac",
    "metadata": {},
    "outputs": [
     {
@@ -5887,8 +6136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "1dc40f55",
+   "execution_count": 54,
+   "id": "0cd6a855",
    "metadata": {},
    "outputs": [
     {
@@ -6264,7 +6513,7 @@
        "Neighborhood_Blueste     -0.000000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6281,7 +6530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5c8301",
+   "id": "4a0c67cb",
    "metadata": {},
    "outputs": [],
    "source": []
