--- a/Beng Cheong Cheong.ipynb
+++ b/Beng Cheong Cheong.ipynb
@@ -4628,11 +4628,11 @@
    "id": "b6f896b7",
    "metadata": {},
    "source": [
-    "## Summary\n",
+    "## 4.4 Summary\n",
     "\n",
-    "In summary, I am choosing Lasso Regression model due the fact that Lasso Regression performs RFE, which will automatically reduce the number of features. As I am not a subject matter expert in the field of real estate, it would be better for the Lasso Regression to perform RFE.\n",
+    "In summary, I am choosing Lasso Regression model due the fact that Lasso Regression performs RFE, which will automatically reduce the number of features. As I am not a subject matter expert in the field of real estate, it would be better for the Lasso Regression to perform RFE. Due to the large number of feature variables which I had, and Lasso Regression performs Feature Selection. As I had not performed too much EDA and I am not an expert in this field and I do not know what is the optimal number of variables of RFE, therefore, I would like to use the Lasso Regression so that Lasso Regression will automatically penalize the less important features, and remove highly-correlated features by selecting one and shrinking the others to zero. \n",
     "\n",
-    "Some of the features that we can explain to the clients are:\n",
+    "Some of the more important features that we can explain to the clients are:\n",
     "1. Neighborhood column. The neighborhood areas correlate very strongly to the housing prices, with some neighborhood areas in particular such as StoneBr, NridgHt, and NoRidge having the highest beta coefficients. \n",
     "2. Some numeric columns, such as 2ndFlrSF (2nd Floor Square Feet) and ExterQual (External Quality Materials), are also features that significantly predictthe priceof house. \n",
     "\n",
@@ -4708,11 +4708,7 @@
    "id": "22f7d2f4",
    "metadata": {},
    "source": [
-    "In my opinion, the Lasso Regression model is passable as the histogram shows that the error terms follow a normal distribution as shown in the histogram, but the error terms does not appear to be very evenly distributed noise around zero. A graph showing more evenly disbributed noise around zero would be more ideal.  \n",
-    "\n",
-    "## 4.4 Summary\n",
-    "\n",
-    "I will choose the Lasso Regression due to the large number of feature variables which I had, and Lasso Regression performs Feature Selection. As I had not performed too much EDA and I am not an expert in this field and I do not know what is the optimal number of variables of RFE, therefore, I would like to use the Lasso Regression so that Lasso Regression will automatically penalize the less important features, and remove highly-correlated features by selecting one and shrinking the others to zero. "
+    "In my opinion, the Lasso Regression model is passable as the histogram shows that the error terms follow a normal distribution as shown in the histogram, but the error terms does not appear to be very evenly distributed noise around zero. A graph showing more evenly disbributed noise around zero would be more ideal.  \n"
    ]
   },
   {
